[package]
name = "liquid-cli"
version = "0.1.0"
edition = "2021"
authors = ["Vipin Kumar <vipin.kumar@liquidapps.io>"]
description = "A simple CLI tool for Liquid Network operations"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
elements = "0.22"
bitcoin = "0.30"
rand = "0.8"